# gol_3d

./: .rustfmt.toml  Cargo.toml  README.md  TODO.md  build-wasm.sh  parse-rule.rkt
cool_rules/: .christmas_matryoshka.gol3d.swp  445.gol3d  blinkin_shape.gol3d  christmas_matryoshka.gol3d  city_builder.gol3d  clouds.gol3d  clouds2.gol3d  crystal_growth.gol3d  crystal_stakes.gol3d  dodec.gol3d  fat_gliders.gol3d  fat_gliders2.gol3d  glider_heaven.gol3d  glider_heaven_small_start.gol3d  gol2d.gol3d  labyrinth_box.gol3d  matryoshka.gol3d  periodic_funky.gol3d  shells.gol3d  slow_decay.gol3d  test.gol3d  wavy_explosion.gol3d
docs/: gol_3d.d.ts  gol_3d.js  gol_3d_bg.wasm.d.ts  index.html
src/: args.rs  camera.rs  compute.wgsl  compute_env.rs  cool_rules.rs  draw.wgsl  environment.rs  game_of_life.rs  instance.rs  lib.rs  main.rs  model.rs  rule.rs  rule_parse.rs  shader.wgsl  texture.rs
