[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24", features = ["png", "jpeg"] }
wgpu = "0.15"
env_logger = "0.10"
log = "0.4"
winit = "0.28"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0"
cgmath = "0.18"
ndarray = "0.15"
ndarray-rand = "0.14.0"
