[package]
name = "gol_3d"
version = "0.1.0"
edition = "2021"
authors = ["GobusMax", "Garbaz"]
description = "A 3D Game Of Life. Rendered with wgpu."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# image = { version = "0.24", features = ["png", "jpeg"] }
wgpu = "0.15"
env_logger = "0.10"
log = "0.4"
winit = "0.28"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
anyhow = "1.0"
cgmath = "0.18"
ndarray = "0.15"
ndarray-rand = "0.14.0"
nom = "7.1.3"
clap = { version = "4.2.1", features = ["derive"] }
futures-intrusive = "0.5.0"
